--- a/SalesAppSystem/appsettings.json
+++ b/SalesAppSystem/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesAppSystemContext": "Server=(localdb)\\mssqllocaldb;Database=SalesAppSystemContext-b6da8acc-daf7-4517-a76d-292f259279c0;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
