--- a/SalesAppSystem/appsettings.json
+++ b/SalesAppSystem/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesAppSystemContext": "Server=(localdb)\\mssqllocaldb;Database=SalesAppSystemContext-b6da8acc-daf7-4517-a76d-292f259279c0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesAppSystemContext": "server=localhost;userid=developer;port=3306;password=C47541240;database=saleswebmvcappdb"
   }
 }
